# KAG

./: README.md  kag_config.yaml  main.py  pyproject.toml
data/sample_docs/: sample_input.json
data/schemas/: medical.json
src/builder/: kg_builder.py
src/llm/: cohere.py
src/model/: kag_model.py
src/solver/: executor.py  json_planner.py  kag_solver.py
src/utils/: normalize_entity.py
src/vector_store/: index.py
